fix navbar spacing

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -6,7 +6,7 @@
     background-color: rgb(255, 255, 255);
     position: absolute;
     width: 100%;
-    height: 70px;
+    height: 80px;
     left: 0;
     right: 0;
     border-bottom: 1px #d6d6d6 solid;
